<resources>
    <string name="app_name">Unit8Assignment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="ActionAdd">Add</string>
    <string name="ActionDelete">Delete</string>
    <string name="ActionEmail">Email</string>
    <string name="ActionTextMessage">Text Message</string>
    <string name="navAdd">Add</string>
    <string name="navDelete">Delete</string>
    <string name="navSettings">Settings</string>
    <string name="navEmail">Email</string>
    <string name="navText">Text Message</string>
</resources>
