<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item
        android:id="@+id/navAdd"
        android:icon="@drawable/ic_add_black_24dp"
        android:title="@string/navAdd" />
    <item
        android:id="@+id/navDelete"
        android:icon="@drawable/ic_delete_black_24dp"
        android:title="@string/navDelete" />
    <item
        android:id="@+id/navEmail"
        android:icon="@drawable/ic_email_black_24dp"
        android:title="@string/navEmail" />
    <item
        android:id="@+id/navText"
        android:icon="@drawable/ic_sms_black_24dp"
        android:title="@string/navText" />
    <item
        android:id="@+id/navSettings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/navSettings" />
</menu>
